fixed image overlap issue

--- a/tcb/assets/sass/custom.scss
+++ b/tcb/assets/sass/custom.scss
@@ -1,4 +1,5 @@
 $breakpoint-medium: 772px;
+$breakpoint-large: 1036px;
 
 figure {
     text-align: center;
@@ -303,7 +304,7 @@ dark-mode-toggle {
 .mobile-footer {
     margin-bottom: 40px;
 
-    @media (min-width: #{$breakpoint-medium}) {
+    @media (min-width: #{$breakpoint-large}) {
         margin-bottom: 0px;
     }
 }
